# wizcli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_cli.py  test_wiz.py
wizcli/: cli.py  wiz.py
