[tool.poetry]
name = "wizcli"
version = "0.1.6"
description = "control WiZ bulbs from the CLI"
authors = ["Agustin B <redraw@sdf.org>"]
readme = "README.md"
repository = "https://github.com/redraw/wizcli"

[tool.poetry.scripts]
wiz = 'wizcli.cli:run'

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
addopts = "-v --cov=wizcli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
